GERONIMO-5213: Clean up Geronimo shell and batch scripts. The geronimo, client, deploy, shutdown, and startup scripts work and behave just like they used to (as in Geronimo 2.2)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@935712 13f79535-47bb-0310-9956-ffa450edef68